crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__br__br_on_cast.snap
---
source: crates/service/tests/diagnostics/typeck/br.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 6,
          "character": 22
        },
        "end": {
          "line": 6,
          "character": 23
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref any)], found [(ref null any)] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 5,
                "character": 6
              },
              "end": {
                "line": 6,
                "character": 22
              }
            }
          },
          "message": "expected type `(ref any)`, found `(ref null any)`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 17,
          "character": 4
        },
        "end": {
          "line": 17,
          "character": 13
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref null $t)], found [(ref null func)]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 15,
                "character": 4
              },
              "end": {
                "line": 15,
                "character": 35
              }
            }
          },
          "message": "expected type `(ref null $t)`, found `(ref null func)`"
        }
      ]
    }
  ]
}
