crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__br__br_on_non_null.snap
---
source: crates/service/tests/diagnostics/typeck/br.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 7,
          "character": 6
        },
        "end": {
          "line": 7,
          "character": 23
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, (ref null $vec)], found [(ref $vec), i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 6,
                "character": 6
              },
              "end": {
                "line": 6,
                "character": 17
              }
            }
          },
          "message": "expected type `(ref null $vec)`, found `i32`"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 5,
                "character": 6
              },
              "end": {
                "line": 5,
                "character": 18
              }
            }
          },
          "message": "expected type `i32`, found `(ref $vec)`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 8,
          "character": 4
        },
        "end": {
          "line": 8,
          "character": 7
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, (ref $vec)], found [i32] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 7,
                "character": 6
              },
              "end": {
                "line": 7,
                "character": 23
              }
            }
          },
          "message": "expected type `(ref $vec)`, found `i32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 16,
          "character": 4
        },
        "end": {
          "line": 16,
          "character": 7
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, (ref $vec)], found [i32] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 15,
                "character": 6
              },
              "end": {
                "line": 15,
                "character": 23
              }
            }
          },
          "message": "expected type `(ref $vec)`, found `i32`"
        }
      ]
    }
  ]
}
