crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__br__br_table_incorrect.snap
---
source: crates/service/tests/diagnostics/typeck/br.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 6
        },
        "end": {
          "line": 4,
          "character": 16
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32], found []"
    },
    {
      "range": {
        "start": {
          "line": 8,
          "character": 6
        },
        "end": {
          "line": 8,
          "character": 16
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, i32], found []"
    },
    {
      "range": {
        "start": {
          "line": 14,
          "character": 6
        },
        "end": {
          "line": 14,
          "character": 16
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, i32], found [f64]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 13,
                "character": 6
              },
              "end": {
                "line": 13,
                "character": 17
              }
            }
          },
          "message": "expected type `i32`, found `f64`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 20,
          "character": 6
        },
        "end": {
          "line": 20,
          "character": 16
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, i32], found [i32]"
    },
    {
      "range": {
        "start": {
          "line": 26,
          "character": 6
        },
        "end": {
          "line": 26,
          "character": 16
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, i32], found [f32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 25,
                "character": 6
              },
              "end": {
                "line": 25,
                "character": 17
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 33,
          "character": 6
        },
        "end": {
          "line": 33,
          "character": 16
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, i32], found [f64, i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 31,
                "character": 6
              },
              "end": {
                "line": 31,
                "character": 17
              }
            }
          },
          "message": "expected type `f32`, found `f64`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 42,
          "character": 8
        },
        "end": {
          "line": 42,
          "character": 18
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, f32, i32], found [f64, f64, i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 40,
                "character": 8
              },
              "end": {
                "line": 40,
                "character": 19
              }
            }
          },
          "message": "expected type `f32`, found `f64`"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 39,
                "character": 8
              },
              "end": {
                "line": 39,
                "character": 19
              }
            }
          },
          "message": "expected type `f32`, found `f64`"
        }
      ]
    }
  ]
}
